[gd_scene load_steps=4 format=2]

[ext_resource path="res://GimpAssets/Board.png" type="Texture" id=1]
[ext_resource path="res://GimpAssets/RowHover.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Objects/Board/Board.gd" type="Script" id=3]

[node name="Board" type="Node2D"]
script = ExtResource( 3 )

[node name="Board_Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Columns" type="Node2D" parent="."]

[node name="Column_1" type="TextureButton" parent="Columns"]
margin_left = -316.0
margin_top = -268.0
margin_right = -227.0
margin_bottom = 267.0
texture_hover = ExtResource( 2 )

[node name="Column_2" type="TextureButton" parent="Columns"]
margin_left = -225.0
margin_top = -269.0
margin_right = -136.0
margin_bottom = 266.0
texture_hover = ExtResource( 2 )

[node name="Column_3" type="TextureButton" parent="Columns"]
margin_left = -137.0
margin_top = -268.0
margin_right = -48.0
margin_bottom = 267.0
texture_hover = ExtResource( 2 )

[node name="Column_4" type="TextureButton" parent="Columns"]
margin_left = -47.0
margin_top = -268.0
margin_right = 42.0
margin_bottom = 267.0
texture_hover = ExtResource( 2 )

[node name="Column_5" type="TextureButton" parent="Columns"]
margin_left = 41.0
margin_top = -268.0
margin_right = 130.0
margin_bottom = 267.0
texture_hover = ExtResource( 2 )

[node name="Column_6" type="TextureButton" parent="Columns"]
margin_left = 133.0
margin_top = -270.0
margin_right = 222.0
margin_bottom = 265.0
texture_hover = ExtResource( 2 )

[node name="Column_7" type="TextureButton" parent="Columns"]
margin_left = 220.0
margin_top = -270.0
margin_right = 309.0
margin_bottom = 265.0
texture_hover = ExtResource( 2 )

[node name="Grid" type="Node2D" parent="."]
position = Vector2( -272, 224 )

[node name="Grid_Row_1" type="Node2D" parent="Grid"]

[node name="Slot_1" type="Position2D" parent="Grid/Grid_Row_1"]
position = Vector2( 2, -2 )

[node name="Slot_2" type="Position2D" parent="Grid/Grid_Row_1"]
position = Vector2( 0, -91 )

[node name="Slot_3" type="Position2D" parent="Grid/Grid_Row_1"]
position = Vector2( 1, -177 )

[node name="Slot_4" type="Position2D" parent="Grid/Grid_Row_1"]
position = Vector2( 2, -267 )

[node name="Slot_5" type="Position2D" parent="Grid/Grid_Row_1"]
position = Vector2( 2, -355 )

[node name="Slot_6" type="Position2D" parent="Grid/Grid_Row_1"]
position = Vector2( 0, -445 )

[node name="Grid_Row_2" type="Node2D" parent="Grid"]
position = Vector2( 90, 0 )

[node name="Slot_1" type="Position2D" parent="Grid/Grid_Row_2"]
position = Vector2( 2, -2 )

[node name="Slot_2" type="Position2D" parent="Grid/Grid_Row_2"]
position = Vector2( 0, -91 )

[node name="Slot_3" type="Position2D" parent="Grid/Grid_Row_2"]
position = Vector2( 1, -177 )

[node name="Slot_4" type="Position2D" parent="Grid/Grid_Row_2"]
position = Vector2( 2, -267 )

[node name="Slot_5" type="Position2D" parent="Grid/Grid_Row_2"]
position = Vector2( 2, -355 )

[node name="Slot_6" type="Position2D" parent="Grid/Grid_Row_2"]
position = Vector2( 0, -445 )

[node name="Grid_Row_3" type="Node2D" parent="Grid"]
position = Vector2( 180, 0 )

[node name="Slot_1" type="Position2D" parent="Grid/Grid_Row_3"]
position = Vector2( 2, -2 )

[node name="Slot_2" type="Position2D" parent="Grid/Grid_Row_3"]
position = Vector2( 0, -91 )

[node name="Slot_3" type="Position2D" parent="Grid/Grid_Row_3"]
position = Vector2( 1, -177 )

[node name="Slot_4" type="Position2D" parent="Grid/Grid_Row_3"]
position = Vector2( 2, -267 )

[node name="Slot_5" type="Position2D" parent="Grid/Grid_Row_3"]
position = Vector2( 2, -355 )

[node name="Slot_6" type="Position2D" parent="Grid/Grid_Row_3"]
position = Vector2( 0, -445 )

[node name="Grid_Row_4" type="Node2D" parent="Grid"]
position = Vector2( 270, 0 )

[node name="Slot_1" type="Position2D" parent="Grid/Grid_Row_4"]
position = Vector2( 2, -2 )

[node name="Slot_2" type="Position2D" parent="Grid/Grid_Row_4"]
position = Vector2( 0, -91 )

[node name="Slot_3" type="Position2D" parent="Grid/Grid_Row_4"]
position = Vector2( 1, -177 )

[node name="Slot_4" type="Position2D" parent="Grid/Grid_Row_4"]
position = Vector2( 2, -267 )

[node name="Slot_5" type="Position2D" parent="Grid/Grid_Row_4"]
position = Vector2( 2, -355 )

[node name="Slot_6" type="Position2D" parent="Grid/Grid_Row_4"]
position = Vector2( 0, -445 )

[node name="Grid_Row_5" type="Node2D" parent="Grid"]
position = Vector2( 357, 0 )

[node name="Slot_1" type="Position2D" parent="Grid/Grid_Row_5"]
position = Vector2( 2, -2 )

[node name="Slot_2" type="Position2D" parent="Grid/Grid_Row_5"]
position = Vector2( 0, -91 )

[node name="Slot_3" type="Position2D" parent="Grid/Grid_Row_5"]
position = Vector2( 1, -177 )

[node name="Slot_4" type="Position2D" parent="Grid/Grid_Row_5"]
position = Vector2( 2, -267 )

[node name="Slot_5" type="Position2D" parent="Grid/Grid_Row_5"]
position = Vector2( 2, -355 )

[node name="Slot_6" type="Position2D" parent="Grid/Grid_Row_5"]
position = Vector2( 0, -445 )

[node name="Grid_Row_6" type="Node2D" parent="Grid"]
position = Vector2( 447, 0 )

[node name="Slot_1" type="Position2D" parent="Grid/Grid_Row_6"]
position = Vector2( 2, -2 )

[node name="Slot_2" type="Position2D" parent="Grid/Grid_Row_6"]
position = Vector2( 0, -91 )

[node name="Slot_3" type="Position2D" parent="Grid/Grid_Row_6"]
position = Vector2( 1, -177 )

[node name="Slot_4" type="Position2D" parent="Grid/Grid_Row_6"]
position = Vector2( 2, -267 )

[node name="Slot_5" type="Position2D" parent="Grid/Grid_Row_6"]
position = Vector2( 2, -355 )

[node name="Slot_6" type="Position2D" parent="Grid/Grid_Row_6"]
position = Vector2( 0, -445 )

[node name="Grid_Row_7" type="Node2D" parent="Grid"]
position = Vector2( 535, 0 )

[node name="Slot_1" type="Position2D" parent="Grid/Grid_Row_7"]
position = Vector2( 2, -2 )

[node name="Slot_2" type="Position2D" parent="Grid/Grid_Row_7"]
position = Vector2( 0, -91 )

[node name="Slot_3" type="Position2D" parent="Grid/Grid_Row_7"]
position = Vector2( 1, -177 )

[node name="Slot_4" type="Position2D" parent="Grid/Grid_Row_7"]
position = Vector2( 2, -267 )

[node name="Slot_5" type="Position2D" parent="Grid/Grid_Row_7"]
position = Vector2( 2, -355 )

[node name="Slot_6" type="Position2D" parent="Grid/Grid_Row_7"]
position = Vector2( 0, -445 )

[connection signal="pressed" from="Columns/Column_1" to="." method="_on_Column_1_pressed"]
[connection signal="pressed" from="Columns/Column_2" to="." method="_on_Column_2_pressed"]
[connection signal="pressed" from="Columns/Column_3" to="." method="_on_Column_3_pressed"]
[connection signal="pressed" from="Columns/Column_4" to="." method="_on_Column_4_pressed"]
[connection signal="pressed" from="Columns/Column_5" to="." method="_on_Column_5_pressed"]
[connection signal="pressed" from="Columns/Column_6" to="." method="_on_Column_6_pressed"]
[connection signal="pressed" from="Columns/Column_7" to="." method="_on_Column_7_pressed"]
